--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,7 @@ title: Spatial Differences in surface temperature mapping using LANDSAT and weat
   stations
 author: "Allison Leet"
 subtitle: Phoenix, AZ region
+document:html
 ---
 
 # Introduction
