adding LANDSAT LST code

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,9 @@
 ---
 title: Spatial Differences in surface temperature mapping using LANDSAT vs. weather stations
-author: "Allison Leet"
+author: Allison Leet
 subtitle: Case Study: Phoenix, AZ
+output:
+  html_document
 ---
 
 # Introduction
@@ -10,17 +12,48 @@ subtitle: Case Study: Phoenix, AZ
 
 # Materials and methods
 
->A land surface temperature image can be derived from either a single LANDSAT image using several algorithms that process the thermal bands of the image or by accessing the weather data from a specific station. Here we are examining the accuracy of the Phoenix Airport weather station in comparison to two LANDSAT images from the month of July 2018, an excessively warm month in the Southwest United States. The weather station data is accesibile from 'rnoaa' package within R. The processing of a LANDSAT image requires manipulation of a downloaded image within R to convert the thermal bands into a land surface temperature image. The process involves inclusion of NDVI (normalized difference vegetation index) and emissivity of the Earth's surface in estimation of land surface temperature to improve accuracy.The steps are as follows:
-1. Download appropriate LANDSAT images from the USGS Earth Explorer and set a working directory for R to grab the Band images from
+>A land surface temperature image can be derived from either a single LANDSAT image using several algorithms that process the thermal bands of the image or by accessing the weather data from a specific station. Here we are examining the accuracy of the Phoenix Airport weather station in comparison to two LANDSAT images from the month of July 2018, an excessively warm month in the Southwest United States. The weather station data is accesibile from 'rnoaa' package within R. The processing of a LANDSAT image requires manipulation of a downloaded image within R to convert the thermal bands into a land surface temperature image. The process involves inclusion of NDVI (normalized difference vegetation index) and emissivity of the Earth's surface in estimation of land surface temperature to improve accuracy.Instructions can be found [here](http://www.gis-blog.com/calculation-of-land-surface-temperature-lst-from-landsat-8-using-r/).
+The steps are as follows:
+1. Download appropriate LANDSAT images from the USGS Earth Explorer and set a working directory from which R will obtain the Band images.
+```{r}
+setwd("C:/Users/Allison/Desktop/School/R Data Science/geo503-2018-finalproject-allisonleet/data")
+```
 2. Convert Digital Numbers (DN) to Top of Atmosphere(TOA) Spectral Radiance using:
   + Band_10 thermal image
   + RADIANCE_MULT_BAND_10 value
   + RADIANCE_ADD_BAND_10 value
-  + (the Radiance values come from the image's corresponding Metadata (MTL) file. 
-
-
-
-# Results
+  + (the Radiance values come from the image's corresponding Metadata (MTL) file
+```{r}
+RADIANCE_MULT_BAND_10 <- 3.3420E-04 
+RADIANCE_ADD_BAND_10 <- 0.10000 
+band_10 = raster("Band10.tif") #change image name accordingly
+toa_band10 <- calc(band_10, fun=function(x){RADIANCE_MULT_BAND_10 * x + RADIANCE_ADD_BAND_10})
+```
+3. Convert Reflectance to At-Satellite Brightness Tempearture in Celcius using:
+  + K1_CONSTANT_BAND_10 <- 774.8853
+  + K2_CONSTANT_BAND_10 <- 1321.0789
+  + toa_band10
+```{r}
+temp10_kelvin <- calc(toa_band10, fun=function(x){K2_CONSTANT_BAND_10/log(K1_CONSTANT_BAND_10/x + 1)})
+temp10_celsius <- calc(temp10_kelvin, fun=function(x){x - 273.15})
+```
+5. Convert At-Satellite Brightness Temperature to Land Surface Temperature and export using:
+  + Band_2 Thermal image
+  + Cloud mask based on band 2 : band 10 threshold over clouds
+  + NDVI using bands 4 and 5
+  + Proportion vegetation based on NDVI
+  + Emissivity (e)
+```{r}
+band_2 = raster("Band2.tif") #change image name accordingly
+threshold <- band_2/band_10  #Calculate threshold for cloud mask
+clouds(band_2, band_10, level = 0.65, buffer = 5)
+band_4 = raster("Band4.tif") #change image name accordingly
+band_5 = raster("Band5.tif") #change image name accordingly
+NDVI <- (band_5 - band_4)/(band_5 + band_4)
+Pv <- ((NDVI - (-1)) / (1 - (-1)))^2
+e <- 0.004 * Pv + 0.986
+LST10_cel <- temp10_celsius/(1 + (10.8 * (temp10_celsius/14380) * log(e)))
+writeRaster(temp10_celsius, "temp10_c.tif")
 
 Show tables, plots, etc. and describe them.
 
