addressing errors attempt 1

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,8 @@
 ---
-title: Spatial Differences in surface temperature mapping using LANDSAT vs. weather stations
-author: Allison Leet
-subtitle: Case Study: Phoenix, AZ
-output:
-  html_document
+title: Spatial Differences in surface temperature mapping using LANDSAT vs. weather
+  stations
+author: "Allison Leet"
+subtitle: 'Case Study: Phoenix, AZ'
 ---
 
 # Introduction
